--- a/app/views/article_stats/_article_summary.html.haml
+++ b/app/views/article_stats/_article_summary.html.haml
@@ -1,7 +1,6 @@
 - if ac.count_all == 0
   - break
 %tr.ac_summary
-  %td
-    = link_to CGI.unescape(ac[:title]), ac[:permalink]
-    == ( #{link_to I18n.t('report.details'), article_dashboard_url(@user[:key], ac.article_id)} )
+  %td= ac[:title]
+  %td== #{link_to "More Details", article_dashboard_url(@user[:key], ac.article_id)} / #{link_to "View Article", ac[:permalink]}
   %td= ac.count_all
