--- a/app/views/article_stats/_articles_stats.html.haml
+++ b/app/views/article_stats/_articles_stats.html.haml
@@ -1,10 +1,12 @@
 %thead
   %tr
-    %th.first Article
+    %th.first_short Article
+    %th.second_short
     %th Views
 %tbody#articles_summary
   = render :partial => 'article_stats/article_summary', :collection => articles_stats, :as => :ac
 %tfoot
   %tr
-    %td{:colspan => 2}
+    %td{:colspan => 3}
+      pagination
       #pagination= paginate articles_stats, :params => {:controller => 'article_stats', :action => 'index'}
