--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js" type="text/javascript"></script>
   <%= javascript_include_tag 'rails', 'highcharts', 'jquery-ui-datepicker-locales' %>
   <%= csrf_meta_tag %>
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/redmond/jquery-ui.css">
   <link rel="stylesheet" href="/flutie/stylesheets/flutie.css">
   <link rel="stylesheet" href="/stylesheets/stats_design.css">
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/redmond/jquery-ui.css">
 </head>
 <body>
 
   <div class="header" align="center">  
-      <img src="http://graphics.suite101.com/blog_logo.png" style="display:block">
-      <a href="http://mysuite.suite101.com" style="display: block; margin-top: -35px">Back to MySuite</a>
+      <a href="<%= dashboard_path(@user[:key]) %>"><img src="http://graphics.suite101.com/stats_logo.png"></a>
+      <a id="mysuite" href="http://my.suite101.com">Back to MySuite</a>
   </div>
   <div class="content">
     <%= yield %>
