--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -1,42 +1,36 @@
-%p.csv{:style => "float:right; margin-top:8px"}=link_to I18n.t('report.download_data'), article_view_csv_path(@user[:key])
-%h1
-  /= I18n.t('report.header')
-  Showing all articles
-
+%p.utility_bar
+  = link_to "Download Yesterday's Data", article_view_csv_path(@user[:key]), :class => "csv"
+%h1 Showing all articles
 %date
   =form_tag dashboard_path(@user[:key]), :method => :get do
     == from #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
     == to #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
-    = submit_tag I18n.t('report.update')
+    = submit_tag "Update"
 %br
+%hr
 
-%h2= I18n.t('report.page_view_graph_header')
+%h2 Readers Viewing My Articles
 #page_view_plot
 
-%h2.summary= I18n.t('report.article_views_line').gsub('[articles_views]', "#{@number_of_articles_with_views}").gsub('[total_views]', "#{@total_view_count}")
+%h2.summary== #{@number_of_articles_with_views} of your articles were viewed #{@total_view_count} times in total.
 #source_chart
 
-%h2= I18n.t('report.articles_header')
+%h2 Which of My Articles People Are Reading?
 %table#article_counts_full
   = render 'article_stats/articles_stats', :articles_stats => @article_counts
 
-
-%h2= I18n.t('report.keyword_header')
+%h2 How Are People Finding Me?
 %table
   %thead
     %tr
       %th.first Keyphrases
       %th Views
-  -# %tfoot
-  -#     %tr
-  -#       %td.rounded-foot{:colspan => 2, :height => 15}
   - @keyphrase_counts.each do |k|
     %tr
       %td= k[0]
       %td= k[1]
-
       
-%h2= I18n.t('report.domain_header')
+%h2 Where Are My Readers Coming From?
 %table
   %thead
     %tr
