More design changes.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
   <div class="content">
     <%= yield %>
   </div>
+  <div class="footer">
+  </div>
   <%= yield :page_javascript %>
 </body>
 </html>
