Fixed a bug with returning address for mysuite.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <body>
 
   <div class="header" align="center">  
-      <a href="<%= dashboard_path(@user[:key]) %>"><img src="http://graphics.suite101.com/stats_logo.png"></a>
+      <a href="http://my.suite101.com"><img src="http://graphics.suite101.com/stats_logo.png"></a>
       <a id="mysuite" href="http://my.suite101.com">Back to MySuite</a>
   </div>
   <div class="content">
