Make domain views loaded via ajax.

--- a/app/views/reports/article_dashboard.html.haml
+++ b/app/views/reports/article_dashboard.html.haml
@@ -22,21 +22,18 @@
 %h2 How Are People Finding &quot;#{@article.title}&quot;?
 #keyphrases_loading.data_loading
   = image_tag 'ajax-loader.gif'
-  %h4 Generating your data. Please wait.
+  %h4 Generating
+  = image_tag 'ajax-loader.gif'
   .clear
 %table#keyphrases
-  -# = render 'article_stats/keyphrases', :keyphrase_counts => @keyphrase_counts
 
 %h2 Where Are People Coming From?
-%table
-  %thead
-    %tr
-      %th.first Domains
-      %th Views
-  - @domain_counts.each do |k|
-    %tr
-      %td= k.domain.blank? ? "[direct]" : k.domain
-      %td= k.domain_views_count
+#domains_loading.data_loading
+  = image_tag 'ajax-loader.gif'
+  %h4 Generating
+  = image_tag 'ajax-loader.gif'
+  .clear
+%table#domains
 
 - content_for :page_javascript do
   = javascript_include_tag 'jquery.highcharts.page-view-plot'
@@ -45,14 +42,15 @@
   :javascript
     $(function(){
       
-      $("#keyphrases_loading").ajaxStart(function(){
-        $(this).show();
-      }).ajaxComplete(function(){
-        $(this).hide();
-      }).hide();
+      // Render the domain counts asynchronously
+      $("#domains").load("#{domains_for_article_url(@user[:key], @article.id)}", {}, function(){
+        $("#domains_loading").hide();
+      });
       
       // Render the keyphrase counts asynchronously
-      $("#keyphrases").load("#{keyphrases_for_article_url(@user[:key], @article.id)}"); 
+      $("#keyphrases").load("#{keyphrases_for_article_url(@user[:key], @article.id)}", {}, function(){
+        $("#keyphrases_loading").hide();
+      });
       
       $("#pagination a").live("click", function() {
           $.get(this.href, function(data) {
