Clean up of ajax code.

--- a/app/views/keyphrases/_keyphrases.html.haml
+++ b/app/views/keyphrases/_keyphrases.html.haml
@@ -10,4 +10,4 @@
 %tfoot
   %tr
     %td{:colspan => 2}
-      #pagination= paginate keyphrase_counts, :params => {:controller => 'keyphrases', :action => 'index'}      
+      #pagination= paginate keyphrase_counts, :params => {:controller => 'keyphrases', :action => 'for_article'}      
