--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -1,6 +1,7 @@
 %p.utility_bar
   = link_to "Download Yesterday's Data", article_view_csv_path(@user[:key]), :class => "csv"
 %h1 Showing all articles
+
 %date
   =form_tag dashboard_path(@user[:key]), :method => :get do
     == from #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
@@ -12,15 +13,16 @@
 %h2 Readers Viewing My Articles
 #page_view_plot
 
-%h2.summary== #{@number_of_articles_with_views} of your articles were viewed #{@total_view_count} times in total.
+%h2.summary== Your articles were viewed #{@total_view_count} times in total.
 #sources_loading
   = render 'loading_indicator'
 #source_chart
 
 %h2 Which of My Articles People Are Reading?
-%table#article_counts_full
-  = render 'article_stats/articles_stats', :articles_stats => @article_counts
-
+#articles_loading
+  = render 'loading_indicator'
+%table#articles
+  
 %h2 How Are People Finding Me?
 #keyphrases_loading
   = render 'loading_indicator'
@@ -47,13 +49,18 @@
         });
       });
       
+      // Render the article counts asynchronously
+      $("#articles").load("#{writer_articles_url(@user[:key], @user[:id])}", {}, function(){
+        $("#articles_loading").hide();
+      });
+      
       // Render the domain counts asynchronously
       $("#domains").load("#{writer_domains_url(@user[:key], @user[:id])}", {}, function(){
         $("#domains_loading").hide();
       });
       
       // Render the keyphrase counts asynchronously
-      $("#keyphrases").load("#{keyphrases_for_writer_url(@user[:key], @user[:id])}", {}, function(){
+      $("#keyphrases").load("#{writer_keyphrases_url(@user[:key], @user[:id])}", {}, function(){
         $("#keyphrases_loading").hide();
       }); 
       
