--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag :all %>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js" type="text/javascript"></script>
-  <%= javascript_include_tag 'rails', 'highcharts', 'jquery-ui-datepicker-locales' %>
+  <%= javascript_include_tag 'rails', 'highcharts', 'jquery-ui-datepicker-locales', 'jquery.highcharts.source-chart', 'jquery.highcharts.page-view-plot' %>
   <%= csrf_meta_tag %>
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/redmond/jquery-ui.css">
   <link rel="stylesheet" href="/flutie/stylesheets/flutie.css">
