--- a/app/views/reports/article_dashboard.html.haml
+++ b/app/views/reports/article_dashboard.html.haml
@@ -30,19 +30,13 @@
 
 - content_for :page_javascript do
   = javascript_include_tag 'jquery.highcharts.page-view-plot'
-  = javascript_include_tag 'jquery.highcharts.source-chart'
   
   :javascript
     $(function(){
       
       $.getJSON("#{article_sources_url(@user[:key], @article.id)}", {}, function(data){
         $("#sources_loading").hide();
-        $('#source_chart').addClass("source_chart").source_chart({
-           series: [{
-             type: 'pie',
-             data: data
-          }]
-        });
+        $('#source_chart').addClass("source_chart").source_chart(data);
       });
       
       // Render the domain counts asynchronously
